--- a/casundo/myapp/templates/myApp/home.html
+++ b/casundo/myapp/templates/myApp/home.html
@@ -18,11 +18,11 @@
                 
             </div>
             <div class="cta-buttons">
-                <button onclick="openAuthModal('signup')" class="btn btn-primary btn-lg">
+                <button onclick="openAuthModal('signup')" class="btn btn-primary p-5 btn-lg">
                     <i class="fas fa-calendar-plus"></i>
                     Book Now
                 </button>
-                <button onclick="openAuthModal('signup')" class="btn btn-outline-primary btn-lg">
+                <button onclick="openAuthModal('signup')" class="btn btn-outline-primary p-5 btn-lg">
                     <i class="fas fa-list-check"></i>
                     View Bookings
                 </button>
@@ -30,7 +30,7 @@
         </div>
         <div class="hero-image-wrapper">
             <div class="hero-image">
-                <img class="cclogo" src="{% static 'images/ccLogo.png' %}" alt="CourtCentral Logo">
+                <img class="cclogo" src="{% static 'images/mylogo.png' %}" alt="CourtCentral Logo">
                 <div class="image-decoration"></div>
             </div>
         </div>
