--- a/casundo/myapp/templates/myApp/reservation_status.html
+++ b/casundo/myapp/templates/myApp/reservation_status.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <div class="main-wrapper">
-    <div class="reservation-status-container">
+    <div class="reservation-status-container w-150 justify-content-center align-items-center">
     <h1>Reservation Status</h1>
 
     {% if messages %}
@@ -75,15 +75,15 @@
                             </td>
                             <td>
                                 <div class="btn-group">
-                                    <button class="btn btn-view view-details" 
+                                    <button class="btn btn-view view-details"
                                             data-reservation-id="{{ reservation.id }}"
-                                            data-bs-toggle="modal" 
+                                            data-bs-toggle="modal"
                                             data-bs-target="#reservationDetailsModal">
                                         <i class="fas fa-eye"></i>
                                     </button>
-                                    <button class="btn btn-edit edit-reservation" 
+                                    <button class="btn btn-edit edit-reservation"
                                             data-reservation-id="{{ reservation.id }}"
-                                            data-bs-toggle="modal" 
+                                            data-bs-toggle="modal"
                                             data-bs-target="#editReservationModal">
                                         <i class="fas fa-edit"></i>
                                     </button>
