--- a/casundo/myapp/templates/myApp/base.html
+++ b/casundo/myapp/templates/myApp/base.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="{% static 'css/home.css' %}">
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
     <link rel="stylesheet" href="{% static 'css/common.css' %}">
+    <link rel="stylesheet" href="{% static 'css/search.css' %}">
     
     {% block styles %}{% endblock %}
 </head>
